# 4mica-core

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  NETTING_CYCLES_AND_GUARANTEE_FINALITY.md  README.md  changes.md  docker-compose.yml  hardhat.config.js  package.json
.claude/: settings.json
.github/: CODEOWNERS
4mica-cli/: .env.example  4mica  bls_key_utils.py  bls_verification.py  core_4mica_client.py  create_tab.py  delete_periods.py  deposit.py  generate_bls_privatekey.py  get_guarantee.py  guarantee.json  remuneration.py  test_bls.py
cache/: solidity-files-cache.json
contracts/: .env.example  AuthorityContract.json  AuthorityContract.sol  GUARANTEE_V2_ACTIVATION.md  GUARANTEE_VERSIONING.md  README.md  foundry.toml  remappings.txt  rename.py
contracts_backup/: foundry.toml
contracts_legacy/: convert.py  foundry.toml
core/: .env.example  Cargo.toml
core/prisma/: schema.prisma
core/src/: auth.rs  bootstrap.rs  config.rs  error.rs  http.rs  lib.rs  scheduler.rs  service.rs  util.rs
core/src/auth/: access.rs  constants.rs  jwt.rs  mod.rs  siwe.rs  utils.rs
core/src/entities/: collateral_event.rs  mod.rs  sea_orm_active_enums.rs  tabs.rs  user.rs  withdrawal.rs
core/src/ethereum/: contract.rs  event_data.rs  event_handler.rs  listener.rs  mod.rs  proxy.rs  scanner.rs  writer.rs
core/src/metrics/: chain.rs  health.rs  metrics.rs  misc.rs  mod.rs  record.rs
core/src/persist/: connector.rs  mapper.rs  mod.rs  prisma.rs  repo.rs
core/src/persist/repo/: admin.rs  auth.rs  balances.rs  chain_cursor.rs  collateral.rs  common.rs  cycles.rs  events.rs  guarantees.rs  mod.rs  settlement.rs  tabs.rs  transactions.rs  users.rs  withdrawals.rs
core/src/service/: api_keys.rs  auth.rs  clearing.rs  cycle.rs  event_handler.rs  guarantee.rs  health.rs  mod.rs  netting.rs  payment.rs  query.rs  tab.rs
core/tests/: adversarial.rs  api.rs  contract_events.rs  deposits.rs  guarantee.rs  guarantees.rs  jwt.rs  mod.rs  monitor.rs  payment.rs  payment_cert.rs  payment_cert_rpc.rs_placeholder  register.rs  remuneration.rs  repo_helpers.rs  repo_tests.rs  settlements.rs  siwe.rs  stablecoin.rs  startup.rs  tab_creation.rs  transactions.rs  withdrawals.rs
core/tests/api/: collateral.rs  guarantee.rs  mod.rs  payments.rs  signing.rs  tabs.rs
core/tests/common/: contract.rs  fixtures.rs  mod.rs  setup.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: error.rs  lib.rs  txtools.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  guarantee.rs  hex.rs  lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: labels.rs  lib.rs  measure.rs  metric.rs  util.rs
crates/derive/tests/: measure.rs
crates/entities/: Cargo.toml  user_transaction.rs
crates/entities/src/: admin_api_key.rs  auth_nonce.rs  auth_refresh_token.rs  blockchain_block.rs  blockchain_event.rs  blockchain_event_cursor.rs  chain_cursor.rs  clearing_batch.rs  collateral_event.rs  cycle_exposure_edge.rs  cycle_participant_position.rs  guarantee.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  settlement_cycle.rs  tabs.rs  user.rs  user_asset_balance.rs  user_transaction.rs  wallet_role.rs  withdrawal.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: http.rs  lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250901_000001_create_table.rs  m20250901_000002_multi_asset.rs  m20250901_000003_user_suspension.rs  m20250901_000004_admin_api_keys.rs  m20251116_000003_blockchain_event.rs  m20251116_000005_blockchain_event.rs  m20251118_000006_tab_payment_totals.rs  m20251120_000007_auth_tables.rs  m20260210_000008_payment_confirmations.rs  m20260210_000009_user_transaction_tab_id.rs  m20260210_000010_user_transaction_record_tx.rs  m20260210_000015_tab_version_and_last_req_id.rs  m20260211_000011_blockchain_event_cursor.rs  m20260213_000012_blockchain_event_v2.rs  m20260213_000013_event_metadata.rs  m20260213_000014_user_transaction_status_enum.rs  m20260216_000000_guarantee_request.rs  m20260305_000001_user_transaction_status_consistency.rs  m20260305_000002_unlock_and_tab_amount_guardrails.rs  m20260403_000003_tab_accepted_guarantee_version.rs  m20260403_000004_guarantee_version.rs  m20260404_000005_active_tab_identity_unique.rs  m20260405_000006_user_transaction_recording_status.rs  m20260423_000006_settlement_cycle_core.rs  m20260423_000007_guarantee_cycle_and_finality.rs  m20260423_000008_add_cycle_guarantee_identity.rs  m20260423_000009_cycle_native_guarantee_storage.rs  m20260423_000010_make_guarantee_cycle_native.rs  m20260423_000011_drop_tabs.rs  m20260507_000007_collateral_event_identity_unique.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: auth.rs  common.rs  constants.rs  core.rs  error.rs  lib.rs  proxy.rs  recipient.rs
crates/rpc/src/guarantee/: codec.rs  mod.rs  mohammad_equity_negotitation.sty  signing.rs  tests.rs  types.rs  validation.rs
crates/telemetry-exporter/: Cargo.toml
crates/telemetry-exporter/src/: app.rs  bootstrap.rs  config.rs  db.rs  handlers.rs  main.rs  scheduler.rs  server.rs  snapshot.rs  state.rs  telemetry.rs
deployment/: deploy.js  deploy.s.sol  deploy_contract.sh  deploy_local.sh
js/: addDepositUser.js  config.js  createTransaction.js  generateAccounts.js  getPindingTransaction.js  getRecipient.js  getTransactions.js  getUserCollateral.js  registerRecipient.js  registerUser.js  remunerateVictim.js
open_api/: 4mica-core.yaml  redoc-static.html
open_rpc/: 4mica-core.json
recipient/: Cargo.toml
recipient/src/: bootstrap.rs  config.rs  main.rs  service.rs
sdk/: Cargo.toml  README.md
sdk/src/: config.rs  contract.rs  digest.rs  error.rs  facilitator.rs  guarantee.rs  lib.rs  sig.rs  util.rs  validators.rs  x402.rs
sdk/src/auth/: mod.rs
sdk/src/client/: mod.rs  model.rs  recipient.rs  user.rs
sdk/src/contract/: mod.rs  utils.rs
sdk/src/sig/: mod.rs  tests.rs
sdk/src/x402/: mod.rs  model.rs
sdk/tests/: auth_session.rs  contract_error.rs  facilitator_flow.rs  guarantee.rs  http_proxy.rs  remunerate.rs  success.rs  withdraw.rs  x402_flow.rs
sdk/tests/common/: mod.rs  x402.rs
(+104 files in other folders)
