[workspace]
resolver = "2"
members = [
    "core",
    "sdk",
    "crates/crypto",
    "crates/rpc",
    "crates/blockchain",
    "crates/migration",
    "crates/entities",
    "crates/metrics",
    "crates/derive",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
rpc = { version = "0.5.0", path = "crates/rpc", package = "rpc-4mica" }
crypto = { version = "0.5.0", path = "crates/crypto", package = "crypto-4mica" }
blockchain = { version = "0.5.0", path = "crates/blockchain" }
migration = { version = "0.5.0", path = "crates/migration" }
entities = { version = "0.5.0", path = "crates/entities" }
metrics-4mica = { version = "0.5.0", path = "crates/metrics" }
derive-4mica = { version = "0.5.0", path = "crates/derive" }

chrono = "0.4.42"
anyhow = "1.0.95"
async-trait = "0.1.86"
thiserror = "2.0.17"
futures-util = "0.3.31"
log = "0.4.29"
env_logger = "0.11.6"
test-log = "0.2.19"
dotenv = "0.15.0"
envconfig = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "rust_crypto",
] }
tokio = "1.49.0"
tokio-cron-scheduler = "0.15.1"
bls-signatures = "0.15.0"
hex = "0.4.3"
uuid = { version = "1.19", features = ["v4"] }
hyper = "1.8.1"
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors"] }
axum = { version = "0.8.8", features = ["macros", "json"] }
http = "1.4.0"
reqwest = { version = "0.13.1", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
alloy = "1.3.0"
alloy-primitives = { version = "1.5.2" }
alloy-sol-types = "1.5.2"
alloy-provider = { version = "1.3.0" }
serial_test = "3.3.1"
sha2 = "0.10.9"
blst = "0.3.16"
url = { version = "2.5.8", features = ["serde"] }
parking_lot = "0.12.5"
rand = "0.9.2"
subtle = "2.6.1"
base64 = "0.22"
zeroize = "1.8.2"
secrecy = "0.10.3"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
