[package]
name = "core-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
rpc = { workspace = true }
crypto = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
prisma-client-rust = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
hex = { workspace = true }
alloy = { workspace = true, features = ["provider-ws"] }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
test-log = { workspace = true }
alloy = { workspace = true, features = ["provider-anvil-node"] }
