[package]
name = "core-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
rpc = { workspace = true }
crypto = { workspace = true }
blockchain = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-cron-scheduler = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
hex = { workspace = true }
alloy = { workspace = true, features = ["provider-ws"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rand = "0.9.0"
sea-orm = { workspace = true }
entities = { workspace = true }
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
test-log = { workspace = true }
alloy = { workspace = true, features = ["provider-anvil-node"] }
chrono = { workspace = true }
once_cell = "1.21.3"
