[package]
name = "core-service"
version = "0.4.0"
edition.workspace = true
publish = false

[dependencies]
rpc = { workspace = true }
crypto = { workspace = true }
blockchain = { workspace = true }
metrics-4mica = { workspace = true }

rand = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-cron-scheduler = { workspace = true }
axum = { workspace = true, features = ["macros", "json"] }
alloy = { workspace = true, features = ["provider-ws"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sea-orm = { workspace = true }
entities = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
parking_lot = { workspace = true }
secrecy = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
test-log = { workspace = true }
alloy = { workspace = true, features = ["provider-anvil-node"] }
alloy-primitives = { workspace = true, features = ["getrandom"] }
reqwest = { workspace = true }
migration = { workspace = true }
