[package]
name = "recipient"
version = "0.1.0"
edition.workspace = true

[dependencies]
rpc = { workspace = true }
crypto = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
jsonrpsee = { workspace = true, features = ["server"] }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }