[package]
name = "sdk-4mica"
version = "0.5.0"
edition.workspace = true
authors = ["4Mica Network <cto@4mica.xyz>"]
description = "Official Rust SDK for interacting with the 4Mica payment network."
license = "CC-BY-NC-4.0"
repository = "https://github.com/4mica-Network/4mica-core"
homepage = "https://4mica.xyz"
readme = "README.md"
keywords = ["4mica", "payments", "blockchain", "sdk", "ethereum"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
rpc = { workspace = true }
crypto = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
alloy-provider = { workspace = true, features = ["anvil-api"] }
test-log = { workspace = true }
serial_test = "3.2.0"
axum = { workspace = true, features = ["macros", "json"] }
serde_json = { workspace = true }
core-service = { path = "../core" }
dotenv = { workspace = true }
