[package]
name = "blockchain"
version = "0.3.1"
edition.workspace = true

[dependencies]
async-trait.workspace = true
alloy = { workspace = true, features = ["provider-ws"] }
futures-util.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio-cron-scheduler.workspace = true
