
[package]
name = "derive-4mica"
version = "0.5.0"
edition.workspace = true
authors = ["4Mica Network <team@4mica.xyz>"]
description = "Derive macros for the 4Mica payment network."
license = "CC-BY-NC-4.0"
repository = "https://github.com/4mica-Network/4mica-core"
homepage = "https://4mica.xyz"
keywords = ["4mica", "derive", "macros"]
categories = ["macros"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.116", features = ["full"] }
