[package]
name = "rpc"
version = "0.1.0"
edition.workspace = true

[dependencies]
crypto = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "server",
    "ws-client",
    "http-client",
] }
alloy-primitives = { workspace = true }
