[package]
name = "rpc-4mica"
version = "0.3.0"
edition.workspace = true
authors = ["4Mica Network <team@4mica.xyz>"]
description = "Shared RPC client and data types for the 4Mica payment network."
license = "CC-BY-NC-4.0"
repository = "https://github.com/4mica-Network/4mica-core"
homepage = "https://4mica.xyz"
keywords = ["4mica", "rpc", "sdk", "ethereum"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[lib]
name = "rpc"

[dependencies]
crypto = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
url = { workspace = true }
